# sycl_test_dot

./: CMakeLists.txt  LICENSE  README.md
include/: test_gpu.cuda.cuh  test_gpu.hip.h  test_gpu.sycl.h
src/: test.cpp  test_gpu.cuda.cu
